# examples

./: .gitignore  .sonarcloud.properties  CONTRIBUTING.md  LICENSE  README.md
.claude/: CLAUDE.md
.claude/skills/sdk-version-bump/: SKILL.md
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/scripts/: assert-agent.sh  start-aasm.sh  stop-aasm.sh
.github/workflows/: README.md  auto-assign.yml  codeql.yml  example-metadata-check.yml  proof-html.yml  verify-all-samples.yml  verify-go.yml  verify-live.yml  verify-node.yml  verify-python.yml  verify-scenarios.yml
docs/: choosing-an-example.md
go/: README.md
go/basic-agent/: README.md  go.mod  go.sum  main.go  main_test.go  policy.go
go/cli-runtime-integration/: README.md  go.mod  go.sum  main.go  main_test.go  policy.go
go/cli-runtime-integration/scripts/: run-with-aasm.sh
go/langchaingo/: README.md  go.mod  go.sum  main.go  policy.go  tools.go
go/tool-policy/: README.md  go.mod  go.sum  main.go  main_test.go  policy.go  tools.go
metadata/: sdk-versions.yaml
node/custom-tool-policy/: README.md  package.json  pnpm-lock.yaml
node/custom-tool-policy/src/: index.ts  policy.ts  tools.ts
node/custom-tool-policy/tests/: smoke.test.ts  with-assembly.test.ts
node/langchain-js-basic-agent/: .env.example  README.md  package.json  pnpm-lock.yaml  tsconfig.json
node/langchain-js-basic-agent/src/: index.ts  tools.ts
node/langgraph-js/: .env.example  README.md  package.json  pnpm-lock.yaml  tsconfig.json
node/langgraph-js/src/: index.ts  policy.ts  tools.ts
node/mastra/: README.md  package.json  pnpm-lock.yaml
node/mastra/src/: index.ts
node/mastra/tests/: smoke.test.ts
node/openai-node-tool-policy/: README.md  package.json  pnpm-lock.yaml
node/openai-node-tool-policy/src/: index.ts  policy.ts  tools.ts
node/openai-node-tool-policy/tests/: smoke.test.ts  with-assembly.test.ts
node/vercel-ai/: README.md  package.json  pnpm-lock.yaml
node/vercel-ai/src/: index.ts  policy.ts  tools.ts
node/vercel-ai/tests/: smoke.test.ts  with-assembly.test.ts
python/: README.md
python/agno-tool-policy/: .env.example  README.md  pyproject.toml
python/agno-tool-policy/src/: main.py  policy.py  tools.py
python/agno-tool-policy/tests/: test_smoke.py
python/autogen-tool-policy/: .env.example  README.md  pyproject.toml
python/autogen-tool-policy/src/: main.py  policy.py  tools.py
python/autogen-tool-policy/tests/: test_smoke.py
python/crewai-research-crew/: .env.example  README.md  pyproject.toml
python/crewai-research-crew/src/: main.py  policy.py
python/custom-tool-policy/: README.md  pyproject.toml
python/custom-tool-policy/src/: main.py  policy.py  tools.py
python/custom-tool-policy/tests/: test_smoke.py
python/google-adk/: README.md  pyproject.toml
python/google-adk/src/: governance.py  main.py
python/google-adk/tests/: test_smoke.py
python/haystack-tool-policy/: .env.example  README.md  pyproject.toml
python/haystack-tool-policy/src/: main.py  policy.py  tools.py
python/haystack-tool-policy/tests/: test_smoke.py
python/langchain-basic-agent/: .env.example  README.md  pyproject.toml
python/langchain-basic-agent/src/: main.py  policy.py  tools.py
python/langchain-basic-agent/tests/: test_smoke.py
python/langchain-research-agent/: README.md  pyproject.toml
python/langchain-research-agent/src/: main.py  policy.py
python/langchain-research-agent/tests/: test_smoke.py
python/langgraph/: README.md  pyproject.toml
python/langgraph/src/: policy.py
python/langgraph/tests/: test_smoke.py
python/llamaindex-tool-policy/: .env.example  README.md  pyproject.toml
python/llamaindex-tool-policy/src/: main.py  policy.py  tools.py
python/llamaindex-tool-policy/tests/: test_smoke.py
python/microsoft-agent-framework-tool-policy/: README.md  pyproject.toml
python/microsoft-agent-framework-tool-policy/src/: main.py  tools.py
python/microsoft-agent-framework-tool-policy/tests/: test_smoke.py
python/openai-agents-sdk/: .env.example  README.md  pyproject.toml
python/openai-agents-sdk/src/: main.py  policy.py  tools.py
python/openai-agents-sdk/tests/: test_smoke.py
python/pydantic-ai/: README.md  pyproject.toml
python/pydantic-ai/src/: agent.py  main.py  policy.py
python/semantic-kernel-tool-policy/: .env.example  README.md  pyproject.toml
python/semantic-kernel-tool-policy/src/: main.py  policy.py  tools.py
python/semantic-kernel-tool-policy/tests/: test_smoke.py
python/smolagents-tool-policy/: .env.example  README.md  pyproject.toml
python/smolagents-tool-policy/src/: main.py  policy.py  tools.py
python/smolagents-tool-policy/tests/: test_smoke.py
python/strands-agents-tool-policy/: .env.example  README.md  pyproject.toml
python/strands-agents-tool-policy/src/: main.py  policy.py  tools.py
python/strands-agents-tool-policy/tests/: test_smoke.py
scenarios/: README.md
scenarios/approval-gates/: README.md  expected-output.txt  policy.yaml
scenarios/approval-gates/node/: package.json  pnpm-lock.yaml
scenarios/approval-gates/python/: pyproject.toml
scenarios/approval-gates/python/src/: approval.py  main.py  tools.py
scenarios/approval-gates/python/tests/: test_smoke.py
scenarios/audit-trace/: README.md  expected-output.txt
scenarios/audit-trace/node/: .env.example  agent.js  package.json
scenarios/budget-limits/: README.md  expected-output.txt
scenarios/live-core-enforcement/: README.md  docker-compose.yml  expected-output.txt
scenarios/policy-enforcement/: README.md  expected-output.txt  policy.yaml
scenarios/policy-enforcement/python/: pyproject.toml
scenarios/policy-enforcement/python/src/: main.py  policy.py  tools.py
scenarios/policy-enforcement/python/tests/: test_smoke.py
scenarios/sidecar-runtime/: docker-compose.yml
scripts/: __init__.py  discover_samples.py  generate_example_metadata.py  test_generate_example_metadata.py
verification-reports/: AAASM-2195.md  AAASM-2197.md  AAASM-2253.md  AAASM-2262-verify-python-examples.md  AAASM-2272.md  AAASM-2311-verify-policy-approval-scenarios.md
(+37 files in other folders)
