[project]
name = "agno-tool-policy"
version = "0.1.0"
description = "Agent Assembly governance demo with the native Agno adapter"
requires-python = ">=3.12"
dependencies = [
    # Requires the agent-assembly release that ships the native Agno adapter
    # (agent_assembly.adapters.agno, AAASM-3537, first published on PyPI in 0.0.1b5).
    "agent-assembly==0.0.1rc3",
    "agno>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
