[project]
name = "autogen-tool-policy"
version = "0.1.0"
description = "Agent Assembly governance demo with AutoGen (autogen-core)"
requires-python = ">=3.12"
dependencies = [
    "agent-assembly==0.0.1rc6",
    # AutoGen has no native Agent Assembly adapter, so this example governs its
    # real `autogen_core.tools.FunctionTool` calls the framework-agnostic way
    # (the same path the `custom-tool-policy` example uses). `autogen-core` is
    # the tool/runtime primitive package shared by AutoGen and the ag2 fork.
    "autogen-core>=0.7.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
asyncio_mode = "auto"
