[project]
name = "crewai-research-crew"
version = "0.1.0"
description = "Agent Assembly governance demo: a CrewAI multi-agent research crew"
requires-python = ">=3.12"
dependencies = [
    "agent-assembly==0.0.1rc6",
]

[project.optional-dependencies]
# The live integration drives a real CrewAI crew. The --mock demo (what CI runs)
# needs none of this — it replays the crew's delegation trajectory offline.
live = [
    "crewai>=1.15.2",
]
dev = [
    "pytest>=9.1.1",
    "pytest-mock>=3.15.1",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
