[project]
name = "custom-tool-policy"
version = "0.1.0"
description = "Agent Assembly governance demo with plain Python tools — no framework required"
requires-python = ">=3.12"
dependencies = [
    "agent-assembly==0.0.1rc5",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.1.1",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
