[project]
name = "google-adk-governed-agent"
version = "0.1.0"
description = "Agent Assembly governance demo with Google ADK"
requires-python = ">=3.12"
dependencies = [
    "agent-assembly>=0.0.1a2",
    "google-adk>=1.28.1,<3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-mock>=3.14.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
asyncio_mode = "auto"
