[project]
name = "google-adk-governed-agent"
version = "0.1.0"
description = "Agent Assembly governance demo with Google ADK"
requires-python = ">=3.12"
dependencies = [
    "agent-assembly==0.0.1rc6",
    "google-adk>=2.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "pytest-mock>=3.15.1",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
asyncio_mode = "auto"
