[project]
name = "haystack-tool-policy"
version = "0.1.0"
description = "Agent Assembly governance demo: a real Haystack agent governed via the native adapter"
requires-python = ">=3.12"
dependencies = [
    "agent-assembly>=0.0.1b2",
    # Haystack 2.x ships the `Tool` / `ToolInvoker` API the SDK's native adapter
    # hooks (haystack.tools.Tool.invoke). 1.x predates it and is out of scope.
    "haystack-ai>=2.0.0,<3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-mock>=3.14.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.uv.sources]
# Track the SDK's git master so the example validates against the latest merged
# adapter before 0.0.1b5 publishes it to PyPI. Switch back to the PyPI release
# pin once 0.0.1b5 is out.
agent-assembly = { git = "https://github.com/ai-agent-assembly/python-sdk.git", branch = "master" }
