[project]
name = "langchain-basic-agent"
version = "0.1.0"
description = "Agent Assembly governance demo with LangChain"
requires-python = ">=3.12"
dependencies = [
    "agent-assembly>=0.0.1rc3,<0.1.0",
    "langchain-core>=1.4.7",
    "langsmith>=0.8.18",  # GHSA-f4xh-w4cj-qxq8: Arbitrary server-side file read
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-mock>=3.14.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
