[project]
name = "langchain-research-agent"
version = "0.1.0"
description = "Agent Assembly governance demo: a LangChain ReAct research agent"
requires-python = ">=3.12"
dependencies = [
    "agent-assembly>=0.0.1b2",
    "langchain-core>=1.4.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-mock>=3.14.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
