[project]
name = "langchain-research-agent"
version = "0.1.0"
description = "Agent Assembly governance demo: a LangChain ReAct research agent"
requires-python = ">=3.12"
dependencies = [
    "agent-assembly==0.0.1rc4",
    "langchain-core>=1.4.9",
    "langsmith>=0.10.2",  # GHSA-f4xh-w4cj-qxq8: Arbitrary server-side file read
]

[project.optional-dependencies]
dev = [
    "pytest>=9.1.1",
    "pytest-mock>=3.15.1",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
