[project]
name = "langgraph-governed-agent"
version = "0.1.0"
description = "Agent Assembly governance demo with LangGraph"
requires-python = ">=3.12"
dependencies = [
    "agent-assembly==0.0.1rc4",
    "langgraph>=1.2.9",
    "langchain-core>=1.4.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.1.1",
    "pytest-mock>=3.15.1",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
