[project]
name = "llamaindex-tool-policy"
version = "0.1.0"
description = "Agent Assembly governance demo with LlamaIndex tool wrapping"
requires-python = ">=3.12"
dependencies = [
    "agent-assembly>=0.0.1a2",
    "llama-index-core>=0.10.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-mock>=3.14.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
