[project]
name = "llamaindex-tool-policy"
version = "0.1.0"
description = "Agent Assembly governance demo with the native LlamaIndex adapter"
requires-python = ">=3.12"
dependencies = [
    # Floor bumped to the release that ships the native LlamaIndex adapter
    # (agent_assembly.adapters.llamaindex, AAASM-3536). Earlier SDK releases
    # lack it, so this example's CI is release-gated on that publish.
    "agent-assembly>=0.0.1b5",
    "llama-index-core>=0.14.22",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-mock>=3.14.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.uv.sources]
# Track the SDK's git master so the example validates against the merged
# adapter until 0.0.1b5 publishes it to PyPI. Revert to the PyPI pin then.
agent-assembly = { git = "https://github.com/ai-agent-assembly/python-sdk.git", branch = "master" }
