[project]
name = "llamaindex-tool-policy"
version = "0.1.0"
description = "Agent Assembly governance demo with the native LlamaIndex adapter"
requires-python = ">=3.12"
dependencies = [
    # Floor bumped to the release that ships the native LlamaIndex adapter
    # (agent_assembly.adapters.llamaindex, AAASM-3536). Earlier SDK releases
    # lack it, so this example's CI is release-gated on that publish.
    "agent-assembly==0.0.1rc6",
    "llama-index-core>=0.14.23",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.1.1",
    "pytest-mock>=3.15.1",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
