[project]
name = "openai-agents-sdk"
version = "0.1.0"
description = "Agent Assembly governance demo with OpenAI Agents SDK"
requires-python = ">=3.12"
dependencies = [
    # Latest release (0.0.2) was yanked upstream ("wrong to release"); pinned to
    # the latest non-yanked release. See AAASM-4441 exception notes.
    "agent-assembly==0.0.1rc4",
    "openai-agents>=0.18.2",
    # Constrain transitive dep to fix GHSA-4xgf-cpjx-pc3j (symlink file read vulnerability)
    "pydantic-settings>=2.14.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.1.1",
    "pytest-mock>=3.15.1",
    "pytest-asyncio>=1.4.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
asyncio_mode = "auto"
