[project]
name = "pydantic-ai-governed-agent"
version = "0.1.0"
description = "Agent Assembly governance demo with Pydantic AI"
requires-python = ">=3.12"
dependencies = [
    "agent-assembly==0.0.1rc6",
    # The Agent Assembly Pydantic AI adapter installs a version-tolerant tool
    # hook: it patches `AbstractToolset.call_tool` (and concrete toolsets such
    # as `FunctionToolset`) on pydantic-ai >=0.3.0, and falls back to the
    # internal `Tool._run` on <0.3.0. No upper pin is needed; governance
    # attaches across the 0.3.x–1.x line.
    "pydantic-ai>=2.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "pytest-mock>=3.15.1",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
asyncio_mode = "auto"
