[project]
name = "semantic-kernel-tool-policy"
version = "0.1.0"
description = "Agent Assembly governance demo with Microsoft Semantic Kernel"
requires-python = ">=3.12"
dependencies = [
    "agent-assembly==0.0.1rc6",
    # Semantic Kernel has no native Agent Assembly adapter (it is distinct from
    # the Microsoft Agent Framework, which does), so this example governs its
    # real `KernelFunction` calls the framework-agnostic way (the same path the
    # `custom-tool-policy` example uses).
    "semantic-kernel>=1.36.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
asyncio_mode = "auto"
