[project]
name = "smolagents-tool-policy"
version = "0.1.0"
description = "Agent Assembly governance demo with Smolagents (Hugging Face)"
requires-python = ">=3.12"
dependencies = [
    "agent-assembly==0.0.1rc5",
    # smolagents is light (no chromadb-style native tree), so it stays in the base
    # deps: the demo governs *real* smolagents.Tool instances through the SDK's
    # native adapter, both offline and live. Pinned <2.0 to the 1.x line whose
    # Tool.__call__ -> forward chokepoint the adapter hooks.
    "smolagents>=1.26.0,<2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.1.1",
    "pytest-mock>=3.15.1",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.mypy]
# smolagents ships no py.typed marker, so importing smolagents.Tool is an
# untyped import. Declare it explicitly here (the same per-module override the
# python-sdk uses for code it does not own) so --strict accepts the import
# without loosening type checking on the example's own code. The Tool subclasses
# in src/tools.py still carry their own scoped `# type: ignore[misc]` for the
# resulting "subclassing Any" base.
[[tool.mypy.overrides]]
module = ["smolagents", "smolagents.*"]
ignore_missing_imports = true
