[project]
name = "strands-agents-tool-policy"
version = "0.1.0"
description = "Agent Assembly governance demo with Strands Agents (AWS)"
requires-python = ">=3.12"
dependencies = [
    "agent-assembly==0.0.1rc6",
    # Strands Agents has no native Agent Assembly adapter, so this example
    # governs its real `@strands.tool` objects the framework-agnostic way
    # (the same path the `custom-tool-policy` example uses).
    "strands-agents>=1.47.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.1.1",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
