[project]
name = "approval-gates"
version = "0.1.0"
description = "Agent Assembly approval gates scenario — offline demo with mocked approval"
requires-python = ">=3.12"
dependencies = [
    "agent-assembly==0.0.1rc6",
    "PyYAML>=6.0.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
