[project]
name = "policy-enforcement"
version = "0.1.0"
description = "Agent Assembly policy enforcement scenario — offline demo"
requires-python = ">=3.12"
dependencies = [
    "agent-assembly>=0.0.1a2",
    "PyYAML>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
